Desafio: MoviFlix front listagem

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -1,8 +1,9 @@
 $theme-colors: (
-    'warning': #FFC700,
-    'primary': #407bff,
-    'danger': #ff5555,
-    "dark": #212529
+    "primary": #407bff,
+    "warning": #FFC700,
+    "danger": #ff4136,
+    "dark": #212529,
+    "secondary": #9E9E9E,
 );
 
 $body-bg: #525252;
