--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,11 @@ a, a:hover {
 }
 
 .base-card {
-  background-color: #fff;
-  border-radius: 10px;
+  background: #6c6c6c;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
 }
+
 
 .base-input {
   letter-spacing: -0.015em;
@@ -36,3 +38,8 @@ a, a:hover {
   background-color: bisque;
 }
 
+ul {
+  list-style-type: none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
