--- a/src/pages/Private/MovieDetails/styles.css
+++ b/src/pages/Private/MovieDetails/styles.css
@@ -1,8 +1,8 @@
-.details-container {
+.movie-details-container {
   margin: 50px 50px 50px 50px;
 }
 
-.details-container h1 {
+.movie-details-container h1 {
   font-size: 35px;
   line-height: 75px;
   color:#FFF;
@@ -10,7 +10,7 @@
 }
 
 
-.details-container h2 {
+.movie-details-container h2 {
   font-size: 25px;
   line-height: 30px;
   color:#FFF;
@@ -18,7 +18,7 @@
 }
 
 
-.details-container p {
+.movie-details-container p {
   font-style: normal;
   font-weight: normal;
   font-size: 25px;
